--- a/css/styles.css
+++ b/css/styles.css
@@ -1058,7 +1058,21 @@ button {
 
 
 /* ---------DZ---6-------Modal-window */
-.drop-text {}
+.drop-text {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 0.02em;
+    position: absolute;
+    /* width: 360px;
+    height: 24px;
+    left: 553px;
+    top: 152px; */
+    padding-bottom: 24px;
+}
 
 .modal-form {
     display: flex;
@@ -1077,12 +1091,31 @@ button {
     width: 100%;
     /* border: rgba(21, 21, 21, 20%); */
     height: 56px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    padding-left: 16px;
+    padding-left: 38px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: border-color var(--time);
 }
 
-.input-text {}
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--accent-focus);
+
+}
+
+.input-text:focus {
+    outline: none;
+    border-color: var(--accent-focus);
+}
+
+.input-text {
+    width: 100%;
+    height: 100px;
+    padding: 15px;
+    margin-bottom: 20px;
+    resize: none;
+    border-radius: 4px;
+}
 
 .modal-form-check {}
 
@@ -1100,4 +1133,26 @@ button {
 
     color: var(--accent-color);
     background-color: var(--accent-focus);
+}
+
+.modal-form-input-icon {
+    display: block;
+    width: 18px;
+    height: 18px;
+    background-color: #868686;
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translatey(-50%);
+    transition: background-color var(--time);
+}
+
+.input-form-wrapper {
+    position: relative;
+    display: block;
+}
+
+.modal-form-input:focus+.modal-form-input-icon {
+    fill: var(--accent-focus);
+    /* background-color: #404bbf; */
 }
