--- a/css/styles.css
+++ b/css/styles.css
@@ -1134,12 +1134,13 @@ button {
 
 .modal-form-policy-check::before {
     content: "";
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
     display: block;
-    border: 1.25px solid #2E2F42;
     border-radius: 2px;
     cursor: pointer;
+    border: 1.25px solid #2E2F42;
+    background-image: url();
 }
 
 /* -------CHECK ----------------*/
@@ -1150,6 +1151,21 @@ button {
 
 background-color: #31D0AA;
 
+.modal-form-check-desk {
+    display: flex;
+    align-items: center;
+    font-style: normal;
+
+}
+
+.modal-form-check-text {
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.04em;
+    color: #757575;
+    margin-bottom: 24px;
+    display: flex;
+}
 
 .form-privacy {}
 
