--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     --second-color: #e7e9fc;
     --green-hover-color: #31D0AA;
     --hover-focus-color: #404bbf;
+    --grei-color: #8E8F99;
     --time: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -281,7 +282,6 @@ button {
 
 .link {
     text-decoration: none;
-    /* display: flex; */
 }
 
 .list {
@@ -611,11 +611,11 @@ button {
     justify-content: center;
     align-items: center;
     background-color: var(--accent-focus);
-    /* transition-duration: 250ms; */
 }
 
 /* ////CUSTOMERS*/
 .icon-cust {
+    ;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
     transition: border-color(var(--time));
@@ -642,7 +642,8 @@ button {
     align-items: center;
     width: 100%;
     height: 100%;
-    border: 1px solid #8e8f99;
+    border: 1px solid var(--grei-color);
+    color: var(--grei-color);
     border-radius: 4px;
     transition-duration: 250ms;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -872,7 +873,6 @@ button {
     position: absolute;
     left: 0px;
     top: 48px;
-    transform: translate();
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
 
@@ -991,6 +991,7 @@ button {
     transition-duration: 1000ms;
 }
 
+.icon-modal {}
 
 .backdrop.is-hidden {
 
@@ -1008,20 +1009,19 @@ button {
     background: #FCFCFC;
     transform: translate(-50%, -50%);
     padding: 24px;
+
 }
 
 .modal-close-btn {
-    position: absolute;
-    top: 24px;
-    right: 24px;
+    width: 24px;
+    height: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
     background-color: transparent;
-    border: 1px solid #8e8f99;
+    border: 1px solid var(--grei-color);
     padding: 0;
-    width: 24px;
-    height: 24px;
     border-radius: 50%;
     background-color: var(--second-color);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1097,8 +1097,8 @@ button {
     height: 56px;
     border-radius: 4px;
     padding-left: 38px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition: border-color var(--time);
+    outline: transparent;
 }
 
 .modal-form-input:focus {
@@ -1110,6 +1110,7 @@ button {
 .input-text:focus {
     outline: none;
     border-color: var(--accent-focus);
+    color: var(--accent-focus);
 }
 
 .input-text {
@@ -1124,6 +1125,11 @@ button {
 
 .input-text::placeholder {
     text-transform: unset;
+}
+
+.modal-form-submint:hover,
+.modal-form-submint:focus {
+    background-color: var(--hover-focus-color);
 }
 
 .modal-form-check {}
@@ -1199,6 +1205,7 @@ background-color: #31D0AA;
     width: 169px;
     height: 56px;
     align-items: center;
+    padding: 0;
 
 }
 
@@ -1226,17 +1233,12 @@ background-color: #31D0AA;
 
 .modal-form-input:focus+.modal-form-input-icon {
     fill: var(--accent-focus);
-
-
 }
 
 .drop-icon {
 
-    fill: #8E8F99;
+    fill: var(--grei-color);
 }
-
-
-
 
 .modal-form-input-icon:focus-within>.drop-icon {
     fill: #4D5AE5;
@@ -1265,8 +1267,6 @@ background-color: #31D0AA;
     border-color: var(--accent-focus);
 }
 
-
-
 .subscribe-title {
     color: var(--accent-color);
     font-family: 'Roboto';
@@ -1279,8 +1279,6 @@ background-color: #31D0AA;
     cursor: pointer;
     margin-left: 59px;
     transition: color var(var(--time));
-
-
 }
 
 .subscribe-title:hover .subscribe-title:focus {
@@ -1334,7 +1332,7 @@ background-color: #31D0AA;
     align-items: center;
     letter-spacing: 0.04em;
 
-    color: rgba(255, 255, 255, 0.6);
+    color: var(--logo-accent);
 }
 
 .subscribe-e-meil-input:focus {
@@ -1381,12 +1379,10 @@ background-color: #31D0AA;
 .footer-btn-subscribe:focus {
 
     background: var(--hover-focus-color);
-    fill: var(--green-hover-color)
 }
 
-.subscribe-input-icon:focus-within.sub-icon> {
-    fill: #31D0AA;
-}
+.subscribe-input-icon:focus+.sub-icon {}
+
 
 .subscribe-input-icon {
     fill: var(--accent-color);
