--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,6 @@
     margin-left: auto;
     margin-right: auto;
     width: 500px;
-
 }
 
 .logo-link {
@@ -99,7 +98,6 @@
 .log {
     color: var(--accent-focus);
 }
-
 
 .logo-f:active {
     color: var(--accent-focus);
@@ -615,11 +613,9 @@ button {
 
 /* ////CUSTOMERS*/
 .icon-cust {
-    ;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
     transition: border-color(var(--time));
-
 }
 
 
@@ -1213,6 +1209,7 @@ background-color: #31D0AA;
     padding: 0;
     transition: background-color var(--time);
     border-color: transparent;
+    transition: background-color var(--time);
 
 }
 
