--- a/css/styles.css
+++ b/css/styles.css
@@ -995,6 +995,7 @@ button {
     visibility: hidden;
     pointer-events: none;
     background-color: rgba(46, 47, 66, 0.4);
+
 }
 
 .modal {
@@ -1025,6 +1026,12 @@ button {
     border-radius: 50%;
     background-color: var(--second-color);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    /* position: absolute;
+    bottom: 24px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: var(--second-color); */
 
 }
 
@@ -1268,38 +1275,22 @@ background-color: #31D0AA;
 
 /* -----------SUBSCRIBE----------- */
 
-.footer-btn-subscribe:focus+.sub-icon {
-
-    background-color: var(--abloccent-focus);
-    fill: var(--button-color);
-}
-
-
 .footer-title:hover .footer-title:focus {
     color: rgba(255, 255, 255, 1);
 }
 
 
-.sub-icon {
-    fill: var(--accent-color);
-}
-
-
-.footer-input:focus {
+.footer-imput:focus {
     border-color: var(--accent-focus);
-}
-
-.footer-btn-subscribe:hover,
-.footer-btn-subscribe:focus {
-
-    background: var(--hover-focus-color);
 }
 
 .footer-form {
     display: flex;
+    width: 100%;
+    height: 40px;
 }
 
-.footer-input {
+.footer-imput {
     background-color: transparent;
     width: 264px;
     height: 40px;
@@ -1307,42 +1298,14 @@ background-color: #31D0AA;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     outline: transparent;
-    color: var(--accent-color);
     padding: 8px 16px;
-    margin-right: 24px;
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
     line-height: 24px;
-    display: flex;
     align-items: center;
     letter-spacing: 0.04em;
     color: rgba(255, 255, 255, 0.6);
-}
-
-.footer-btn-subscribe {
-    background: #4D5AE5;
-    border-radius: 4px;
-    color: var(--accent-color);
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.04em;
-    width: 165px;
-    height: 40px;
-    border-color: transparent;
-    transition-property: background-color;
-    transition-timing-function: var(--time);
-    display: flex;
-    align-items: center;
-    align-content: center;
-    margin: auto;
-}
-
-.email-subscribe {
-    margin-left: 159px;
 }
 
 .footer-title {
@@ -1355,7 +1318,60 @@ background-color: #31D0AA;
     line-height: 24px;
     letter-spacing: 0.02em;
     cursor: pointer;
+}
+
+.footer-subscribe {
+    width: 453px;
+    height: 80px;
+}
+
+.footer-form {
     display: flex;
-    align-content: center;
-    margin-left: auto;
+    width: 100%;
+    height: 40px;
+}
+
+
+.footer-imput::placeholder {
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    width: 165px;
+    height: 40px;
+    background-color: var(--accent-focus);
+    border: none;
+    border-radius: 4px;
+    color: var(--button-color);
+    font-size: 16px;
+    line-height: 1.5;
+    padding: 8px 24px;
+    margin-left: 24px;
+    cursor: pointer;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: var(--time);
+}
+
+.footer-btn-icon {
+    width: 24px;
+    height: 24px;
+    fill: var(--accent-color);
+}
+
+.footer-btn:focus,
+.footer-btn:hover {
+    background-color: var(--hover-focus-color);
+
+}
+
+.media {
+    margin-right: 80px;
 }
